I`ve found the method for divide info between views. Trainee views has been created. It can be deleted in second commit.

--- a/FitnessCenterAspNetMVCApp/Views/Shared/_Layout.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/Shared/_Layout.cshtml
@@ -28,8 +28,15 @@
                 @Html.Partial("_LoginPartial")
             </div>
         </div>
+        
     </div>
     <div class="container body-content">
+        <div class="search">
+            <form action="#">
+                <input type="search" placeholder="Search..." />
+                <button>Search</button>
+            </form>
+        </div>
         @RenderBody()
         <hr />
         <footer>
