Images have been added.

--- a/FitnessCenterAspNetMVCApp/Views/Home/Index.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/Home/Index.cshtml
@@ -8,5 +8,19 @@
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
+<div class="about_us">
+    <ul>
+        <li>
+            <div></div>
+        </li>
+        <li>
+            <div></div>
+        </li>
+        <li>
+            <div></div>
+        </li>
+    </ul>
+</div>
+
 
 @Html.Partial("Trainee") <!--It needs for show parts of html code from another view. It also helps to divide information between views.-->
