--- a/FitnessCenterAspNetMVCApp/Content/MainStyleSheet.css
+++ b/FitnessCenterAspNetMVCApp/Content/MainStyleSheet.css
@@ -1,4 +1,9 @@
-﻿li {
+﻿@font-face {
+    src:url("../fonts/Marck_Script.ttf");
+    font-family:Marck;
+}
+
+li {
     list-style:none;
 }
 
@@ -10,4 +15,50 @@
     display:inline-block;   
 }
 
+.coaches {
+    background:black;
+    padding-top:5px;
+}
+
+    .coaches h4:first-child, .services h4 {
+        font-size:25px;
+        margin-left:500px;
+        color:#eeeeee;
+        font-family:Marck;
+    }
+
+.coachlist h4{
+    color:#eeeeee;
+    font-size:20px;
+    font-family:Marck;
+    margin-left:30px;
+}
+
+.coachlist h5 {
+    color:#eeeeee;
+    font-size:15px;
+    font-family:Marck;
+    margin-left:30px;
+}
+
+.services {
+    margin-top:5px;
+    background:black;
+}
+
+    .services h5 {
+        color:#eeeeee;
+        font-size:15px;
+    }
+
+.more_btn{
+    background-image: -webkit-linear-gradient(top, #222222, #000000, #EEEEEE);
+	border-radius:5px 5px 5px 5px;
+    color:#eeeeee;
+}
+
+    .more_btn:hover {
+        box-shadow: 0 0 10px 3px #5B75F0;
+        color:#5B75F0;
+    }
 
