--- a/FitnessCenterAspNetMVCApp/Views/Feedback/ShowFeedback.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/Feedback/ShowFeedback.cshtml
@@ -1,20 +1,31 @@
 ﻿@Styles.Render("~/Content/MainStyleSheet.css")
 
 
-<div class="row feedback">
+<div class="feedback">
 
     <h4>Отзывы</h4>
 
-    @foreach(Feedback fb in ViewBag.listFeedback)
-    {
-        <div class="col-md-4 feedback_msg">      
-            <h4>
-                @Html.DisplayFor(modelItem => fb.f_name)
-            </h4>
-            <h5>
-                @Html.DisplayFor(modelItem => fb.f_message)
-            </h5>
-        </div>
+    <ul>
 
-    }
+        @foreach (Feedback fb in ViewBag.listFeedback)
+        {
+            <li>
+                <div class="col-md-4 feedback_msg">
+                    <h4>
+                        @Html.DisplayFor(modelItem => fb.f_name)
+                    </h4>
+                    <h5>
+                        @Html.DisplayFor(modelItem => fb.f_message)
+                    </h5>
+                </div>
+            </li>
+
+        }
+    </ul>
+
+    
+</div>
+
+<div>
+    <a class="btn btn-default feedback_btn" href="http://localhost:31785/Feedback/AddFeedback">Оставить отзыв</a>
 </div>
