--- a/FitnessCenterAspNetMVCApp/Views/Shared/_Layout.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/Shared/_Layout.cshtml
@@ -12,7 +12,22 @@
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
         <div class="container">
-                <h1 id="title"><a href="#">Фитнес-центр</a></h1>
+
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+            </div>
+            <div class="navbar-collapse collapse">
+                <ul class="nav navbar-nav menu_li">
+                    <li><h1 id="title"><a href="http://localhost:31785/Home">Фитнес-центр</a></h1></li>
+                    <li><a href="http://localhost:31785/Coach/CoachView">Тренеры</a></li>
+                    <li><a href="http://localhost:31785/Service/ServiceView">Услуги</a></li>
+                    <li><a href="http://localhost:31785/Feedback/ShowFeedback">Отзывы</a></li>
+                </ul>
+            </div>
                 
                 <div class="contacts"> 
                     <h3>ул. Сумская, 18/20, +38(098)-111-22-33</h3>                
