--- a/FitnessCenterAspNetMVCApp/Views/Service/ServiceView.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/Service/ServiceView.cshtml
@@ -1,5 +1,8 @@
-﻿@Styles.Render("~/Content/MainStyleSheet.css")
+﻿@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
+
 @Scripts.Render("~/Scripts/ShowHideInfoScript.js")
+
 
 <div class="row services">
 
@@ -20,7 +23,7 @@
                 @Html.DisplayFor(modelItem => serv.s_price) грн
             </h5>
             <p><a class="btn btn-default more_btn" href="#">Подробнее</a></p>
-            <div style="display:none" class="temp">
+            <div class="temp">
                 Additional info about service.
 
                 <p><a class="btn btn-default more_btn_hide" href="#">Скрыть</a></p>
