--- a/FitnessCenterAspNetMVCApp/Views/Home/Index.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/Home/Index.cshtml
@@ -2,21 +2,8 @@
     ViewBag.Title = "Home Page";
 }
 
-@Styles.Render("~/Content/MainStyleSheet.css")
+@Styles.Render("~/Content/Site.css")
 
-<div class="about_us">
-    <ul>
-        <li>
-            <div><img src="~/Images/Content/lady.jpg" /></div>
-        </li>
-        <li>
-            <div><img src="~/Images/Content/about_us.jpg" /></div>
-        </li>
-        <li>
-            <div><img src="~/Images/Content/man.jpg" /></div>
-        </li>
-    </ul>
-</div>
 
 
  <!--It needs for show parts of html code from another view. It also helps to divide information between views.-->
