--- a/FitnessCenterAspNetMVCApp/Views/Shared/_Layout.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/Shared/_Layout.cshtml
@@ -4,7 +4,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
-    <link href="~/Content/HeadesStyleSheet.css" rel="stylesheet" />
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -19,39 +18,113 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
+                <a class="navbar-brand" href="/">Фитнес-центр</a>
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav menu_li">
-                    <li><h1 id="title"><a href="http://localhost:31785/Home">Фитнес-центр</a></h1></li>
-                    <li><a href="http://localhost:31785/Coach/CoachView">Тренеры</a></li>
-                    <li><a href="http://localhost:31785/Service/ServiceView">Услуги</a></li>
-                    <li><a href="http://localhost:31785/Feedback/ShowFeedback">Отзывы</a></li>
+                <ul class="nav navbar-nav">
+                    <li>
+                        <a href="http://localhost:31785/Service/ServiceView">Услуги</a>                   
+                    </li>
+                    <li>
+                        <a href="http://localhost:31785/Coach/CoachView">Тренеры</a>
+                    </li>
+                    <li>
+                        <a>Абонемент</a>                
+                    </li>
+                    <li>
+                        <a href="http://localhost:31785/Timetable/TimetableView">Расписание</a>
+                    </li>
+                    <li>
+                        <a>Статьи</a>                   
+                    </li>
+                    <li>
+                        <a href="http://localhost:31785/Feedback/ShowFeedback">Отзывы</a>                  
+                    </li>
                 </ul>
             </div>
-                
-                <div class="contacts"> 
-                    <h3>ул. Сумская, 18/20, +38(098)-111-22-33</h3>                
-                    <ul class="social">
-                        <li><a href="https://vk.com/" target="_blank" id="vk">Vkontakte</a></li>
-                        <li><a href="https://www.facebook.com/" target="_blank" id="fb">Facebook</a></li>
-                        <li><a href="https://twitter.com/" target="_blank" id="tw">Twitter</a></li>
-                        <li><a href="https://www.google.com.ua/" target="_blank" id="go">Google</a></li>
-                        <li><a href="https://www.instagram.com" target="_blank" id="insta">Instagram</a></li>
-                        <li><a href="https://ok.ru/" target="_blank" id="ok">Odnoklassniki</a></li>
-                    </ul>
-                </div>
-
         </div>
         
     </div>
     <div class="container body-content">
-        <div class="search">
-            <form action="#">
-                <input type="search" placeholder="Search..." />
-                <button>Search</button>
-            </form>
+
+        <div id="myCarousel" class="carousel slide" data-ride="carousel" >
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+            </ol>
+            <div class="carousel-inner" role="listbox">
+                <div class="item info active">
+                    <ul class="">
+                        <li>
+                            <div><img src="~/Images/Content/lady.jpg" /></div>
+                        </li>
+                        <li>
+                            <div><img src="~/Images/Content/about_us.jpg" /></div>
+                        </li>
+                        <li>
+                            <div><img src="~/Images/Content/man.jpg" /></div>
+                        </li>
+                    </ul>
+                </div>
+
+                <div class="item info">
+                    <div>
+                        <img src="~/Images/Content/tennisistka.jpg" />
+                    </div>
+                </div>
+
+                <div class="item info">
+                    <div>
+                        <img src="~/Images/Content/fight.jpg" />
+                    </div>
+                </div>
+
+                <div class="item info">
+                    <div class="contacts">
+                        <p id="contacts_title">Контакты</p>
+                             <div class="contacts_first">
+                                 <p>ул. Сумская, 18/20, тел. +38(098)111-22-33</p>
+                             </div>
+                             <div class="contacts_second">
+                                 <p>Мы в социальных сетях</p>
+                                 <ul class="social">
+                                     <li>
+                                         <a href="#" id="vk">Vk</a>
+                                     </li>
+                                     <li>
+                                         <a href="#" id="fb">Facebook</a>
+                                     </li>
+                                     <li>
+                                         <a href="#" id="tw">Twitter</a>
+                                     </li>
+                                     <li>
+                                         <a href="#" id="ok">Odnoklassniki</a>
+                                     </li>
+                                     <li>
+                                         <a href="#" id="go">Google</a>
+                                     </li>
+                                     <li>
+                                         <a href="#" id="insta">Instagram</a>
+                                     </li>
+                                 </ul>
+                             </div>                          
+                    </div>
+                </div>      
+            </div>
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a> 
         </div>
+
         @RenderBody()
+               
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
