Add abonement model has been created. View and controller for that have been created too. It work correctly.

--- a/FitnessCenterAspNetMVCApp/Views/Shared/_Layout.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
                         <a href="http://localhost:31785/Coach/CoachView">Тренеры</a>
                     </li>
                     <li>
-                        <a>Абонемент</a>                
+                        <a href="http://localhost:31785/AddNewAbonement/AddNewAbonementView">Абонемент</a>                
                     </li>
                     <li>
                         <a href="http://localhost:31785/Timetable/TimetableView">Расписание</a>
