--- a/FitnessCenterAspNetMVCApp/Views/Timetable/TimetableView.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/Timetable/TimetableView.cshtml
@@ -32,19 +32,9 @@
         <td>
             @Html.DisplayFor(modelItem => item.coach)
         </td>
-        <td>
-                @{
-
-                    string.Format("{0}:{1}", time, min);
-
-                }            
+        <td>10:00       
         </td>
-        <td>
-            @{
-
-                string.Format("комн. {0}", room);
-
-            }
+        <td>комн. 12
             
         </td>
     </tr>
