--- a/FitnessCenterAspNetMVCApp/Content/bootstrap.css
+++ b/FitnessCenterAspNetMVCApp/Content/bootstrap.css
@@ -1876,7 +1876,7 @@ input[type="number"]::-webkit-inner-spin-button {
 
 .form-control {
     display: block;
-    width: 100%;
+  /*  width: 100%;*/
     height: 34px;
     padding: 6px 12px;
     font-size: 14px;
