--- a/FitnessCenterAspNetMVCApp/Views/AddNewAbonement/AddNewAbonementView.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/AddNewAbonement/AddNewAbonementView.cshtml
@@ -8,7 +8,7 @@
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>Абонемент</h4>
+        <h3 id="page_title">Абонемент</h3>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -69,7 +69,7 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Создать" class="btn btn-default" />
             </div>
         </div>
     </div>
