--- a/FitnessCenterAspNetMVCApp/Views/Coach/CoachView.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/Coach/CoachView.cshtml
@@ -5,7 +5,7 @@
 
 
 <div class="coaches">
-    <h4>Тренеры</h4>
+    <h3 id="page_title">Тренеры</h3>
     <ul class="coachlist">
         @foreach (Coach c in ViewBag.coachList)
         {
