--- a/FitnessCenterAspNetMVCApp/Views/Feedback/ShowFeedback.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/Feedback/ShowFeedback.cshtml
@@ -1,7 +1,7 @@
 ﻿
 <div class="">
 
-    <h4>Отзывы</h4>
+    <h3 id="page_title">Отзывы</h3>
 
 <table>
     <tr>
@@ -12,7 +12,7 @@
             <tr>
                 <td>
                 <div>
-                    <h4>
+                    <h4>От: 
                         @Html.DisplayFor(modelItem => fb.f_name)
                     </h4>
                     <h5>
