--- a/FitnessCenterAspNetMVCApp/Views/Shared/_Layout.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                         <a href="http://localhost:31785/Timetable/TimetableView">Расписание</a>
                     </li>
                     <li>
-                        <a>Статьи</a>                   
+                        <a href="http://localhost:31785/Home/Index">Статьи</a>                   
                     </li>
                     <li>
                         <a href="http://localhost:31785/Feedback/ShowFeedback">Отзывы</a>                  
@@ -91,22 +91,22 @@
                                  <p>Мы в социальных сетях</p>
                                  <ul class="social">
                                      <li>
-                                         <a href="#" id="vk">Vk</a>
+                                         <a href="https://vk.com/" id="vk" target="_blank">Vk</a>
                                      </li>
                                      <li>
-                                         <a href="#" id="fb">Facebook</a>
+                                         <a href="https://www.facebook.com/" id="fb" target="_blank">Facebook</a>
                                      </li>
                                      <li>
-                                         <a href="#" id="tw">Twitter</a>
+                                         <a href="https://twitter.com/" id="tw" target="_blank">Twitter</a>
                                      </li>
                                      <li>
-                                         <a href="#" id="ok">Odnoklassniki</a>
+                                         <a href="https://ok.ru/" id="ok" target="_blank">Odnoklassniki</a>
                                      </li>
                                      <li>
-                                         <a href="#" id="go">Google</a>
+                                         <a href="https://www.google.com.ua" id="go" target="_blank">Google</a>
                                      </li>
                                      <li>
-                                         <a href="#" id="insta">Instagram</a>
+                                         <a href="https://www.instagram.com" id="insta" target="_blank">Instagram</a>
                                      </li>
                                  </ul>
                              </div>                          
