--- a/FitnessCenterAspNetMVCApp/Views/Feedback/AddFeedback.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/Feedback/AddFeedback.cshtml
@@ -1,14 +1,13 @@
 ﻿@model FitnessCenterAspNetMVCApp.Feedback
 
-
-<div class="">
+<div>
 
 @using (Html.BeginForm("SaveFeedback", "Feedback")) 
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal feedbackform">
-        <h4>Оставить отзыв</h4>
+        <h3 id="page_title">Оставить отзыв</h3>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         <div class="form-group">
@@ -19,7 +18,7 @@
             </div>
         </div>
 
-        <div class="form-group">
+        <div class="form-group" >
             @Html.LabelFor(model => model.f_email, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.f_email, new { htmlAttributes = new { @class = "form-control" } })
@@ -44,8 +43,9 @@
     </div>
 }
 
-    <div>
+    <div class="btn btn-default">
         <a href="http://localhost:31785/Feedback/ShowFeedback">К списку отзывов</a>
     </div>
 
 </div>
+
