--- a/FitnessCenterAspNetMVCApp/Views/AddNewAbonement/AddNewAbonementView.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/AddNewAbonement/AddNewAbonementView.cshtml
@@ -1,5 +1,9 @@
 ﻿@model FitnessCenterAspNetMVCApp.Models.AddNewAbonementModel
 
+@Styles.Render("~/Content/Site.css")
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
+@Scripts.Render("~/Scripts/ShowHideInfoScript.js")
 
 @using (Html.BeginForm("SaveNewAbonement", "AddNewAbonement"))
 {
