--- a/FitnessCenterAspNetMVCApp/Views/Feedback/AddFeedback.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/Feedback/AddFeedback.cshtml
@@ -29,14 +29,14 @@
         <div class="form-group">
             @Html.LabelFor(model => model.f_message, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.f_message, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextAreaFor(model => model.f_message, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.f_message, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Оставить отзыв" class="btn btn-default" />
 
             </div>
         </div>
