--- a/FitnessCenterAspNetMVCApp/Views/Home/About.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/Home/About.cshtml
@@ -1,7 +1,97 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "Home Page";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+@Styles.Render("~/Content/Site.css")
+@Scripts.Render("~/bundles/jquery")
+@Scripts.Render("~/bundles/bootstrap")
+@Scripts.Render("~/Scripts/ShowHideInfoScript.js")
+
+<h3 id="page_title">Статьи</h3>
+
+<!--first article-->
+
+<div class="row">
+    <div class="col-lg-12">
+        <h4>Питание после тренировки</h4>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-7">
+        <a href="#">
+            <img class="img-responsive" src="~/Images/Content/Articles/images (1).jpg" />
+        </a>
+    </div>
+    <div class="col-md-5">
+        <p>
+            При сверх интенсивных тренировках происходит повышенное выделение катаболических
+            гормонов - кортизола и глюкагона. Так же усиливается секреция катехоламинов – гормонов,
+            провоцирующих разрушение мышечной ткани. Такие гормоны всегда выделяются организмом при
+            физическом или нервном стрессе. Сразу становиться ясно, почему нервотрепка обычно
+            приводит к потере мышечной массы. После тренировки ваша главная задача дать
+            организму “быстрые” углеводы. Это хорошо спровоцирует организм выделять
+            инсулин – гормон, нейтрализующий влияние кортизола, катехоламинов и глюкагона.
+            Превосходным источником простых углеводов являются мед и изюм. Что же по части белка, то профессионалы
+            рекомендуют использовать сывороточный протеин. Он быстро переваривается
+            и насыщает кровь аминокислотами.
+        </p>
+    </div>
+</div>
+
+<!--second article-->
+
+<div class="row">
+    <div class="col-lg-12">
+        <h4>Витамины С и Е</h4>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-7">
+        <a href="#">
+            <img class="img-responsive" src="~/Images/Content/Articles/images (2).jpg" />
+        </a>
+    </div>
+    <div class="col-md-5">
+        <p>
+            Во время интенсивного тренинга в организме человека появляется большое
+            количество свободных радикалов. Эти вредные вещества способствуют
+            разрушению мышечной ткани. Ученые даже считают их одной из основных
+            причин заболеваний – от кожных да раковых опухолей. Спортивные физиологи советуют при
+            регулярных интенсивных тренировках принимать в больших
+            количествах антиоксиданты – витамины C и Е. Поступая в
+            организм, эти витамины разрушают свободные радикалы.
+            В результате научных исследований, проводимых при участии
+            группы тяжелоатлетов, было выяснено, что 1200 м.е. витамина
+            Е и 1000мг витамина С резко снижает в крови уровень креатинкиназы.
+            Чем меньше содержание в крови этого побочного продукта разрушения
+            мышц свободными радикалами, тем меньше масштаб разрушений.
+        </p>
+    </div>
+</div>
+
+<!--third article-->
+
+<div class="row">
+    <div class="col-lg-12">
+        <h4>Разнообразие пищи</h4>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-7">
+        <a href="#">
+            <img class="img-responsive" src="~/Images/Content/Articles/images (3).jpg" />
+        </a>
+    </div>
+    <div class="col-md-5">
+        <p>
+            В растительной “живой” пище учеными было обнаружено около пятидесяти фитовеществ. Эти вещества обладают свойствами антиоксидантов, укрепляют
+            иммунную систему, предотвращают развитие тяжелых заболеваний. В сублимированных продуктах,
+            купленных в магазине, таких веществ крайне мало. Многолетний опыт культуристов показал, что мышцы отказываются расти на диете бедной овощами
+            и натуральными фруктами. Ежедневное меню обязательно должно включать в себя три порции
+            овощей и столько же фруктов. Можно добавлять в белковые коктейли свежезамороженные
+            ягоды и фрукты. С такими гарнирами как рис и макароны хорошо “идет” нашинкованная
+            тушеная капуста, сладкий перец и грибы. Вам необходимо как минимум раз в день съедать
+            большую порцию салата желательно заправленного растительным маслом.
+        </p>
+    </div>
+</div>
