--- a/FitnessCenterAspNetMVCApp/Views/Shared/_Layout.cshtml
+++ b/FitnessCenterAspNetMVCApp/Views/Shared/_Layout.cshtml
@@ -7,6 +7,7 @@
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -14,7 +15,9 @@
 
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
+                    <span class="icon-bar">
+                        
+                    </span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
@@ -35,12 +38,13 @@
                         <a href="http://localhost:31785/Timetable/TimetableView">Расписание</a>
                     </li>
                     <li>
-                        <a href="http://localhost:31785/Home/Index">Статьи</a>                   
+                        <a href="http://localhost:31785/Home/About">Статьи</a>                   
                     </li>
                     <li>
                         <a href="http://localhost:31785/Feedback/ShowFeedback">Отзывы</a>                  
                     </li>
                 </ul>
+                <span id="doc_time"></span>
             </div>
         </div>
         
